Kubernetes/kustomize/base/monitor/semaphore.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: semaphoreui
  name: semaphoreui
spec:
  selector:
    matchLabels:
      app: semaphoreui
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: semaphoreui
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/transparent-proxy: "true" # Can use K8 DNS instead of having to
    spec:
      containers: 
        - name: semaphoreui
          image: semaphoreui/semaphore:latest
          imagePullPolicy: "Always"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          resources:
          ports:
            - containerPort: 3000
      volumes:
        - name: semaphore-storage
          persistentVolumeClaim:
            claimName: semaphore-storage-claim
      restartPolicy: Always
      serviceAccount: semaphoreui
      nodeName: monitor

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: semaphoreui
  name: semaphoreui
spec:
  ports:
    - name: http-web-ui
      port: 3000
      targetPort: 3000
  selector:
    app: semaphoreui
