Kubernetes/kustomize/base/monitor/gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: monitoring-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true # sends 301 redirect for http requests
      hosts:
        - monitoring/grafana.homelab.ezequielvalencia.com
        - monitoring/semaphore.homelab.ezequielvalencia.com
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: media-certs # Same name as secret 
      hosts:
        - monitoring/grafana.homelab.ezequielvalencia.com
        - monitoring/semaphore.homelab.ezequielvalencia.com # namespace/FQDN 
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-route
spec:
  hosts:
  - grafana.homelab.ezequielvalencia.com
  gateways:
  - monitoring-gateway
  http:
  - route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 80

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: semaphore-route
spec:
  hosts:
  - semaphore.homelab.ezequielvalencia.com
  gateways:
  - monitoring-gateway
  http:
  - route:
    - destination:
        host: semaphoreui
        port:
          number: 3000
